--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "CRUD-warm-up",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.2",
-    "knex": "^0.13.0",
-    "pg": "^7.0.2"
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
   }
 }
